blog-preview-card-main/style.css
@font-face {
    font-family: "Figtree";
    src: url(assets/fonts/Figtree-VariableFont_wght.ttf);
}
*, *::before, *::after {
    box-sizing: border-box;
    font-family: 'Figtree', serif;
}

body {
 margin: 0;
 background: hsl(47, 88%, 63%);
}

main {
    margin: 0 auto;
    min-height: 100dvh;
    display: grid;
    place-content: center;
}

a {
    text-decoration: none;
    color: #000;
    font-weight: bold;
    display: block;
}

img {
    max-width: 100%;
}

/* ========>>>>>>> Card styles <<<<<<<======== */
.card {
    min-width: 280px;
    width: 90%;
    max-width: 375px;
    background: #fff;
    padding: 1.5rem;
    margin: 0 auto;
    border-radius: 1.5rem;
    border: 1px solid black;
    box-shadow: .5rem .5rem ;
}

.card__img {
    border-radius: .75rem;
    height: 13rem;
    object-fit: cover;
}

#card__btn {
    padding: .25rem .75rem;
    background: hsl(47, 88%, 63%);
    display: inline-block;
    border-radius: 4px;
    margin-top: 1.25rem;
    font-size: 14px;
}

.card__heading:hover {
    color: hsl(47, 88%, 63%);
}

.card__description {
    color: hsl(0, 0%, 50%);
    font-size: 14px;
}

.author {
    display: flex;
    align-items: center;
    gap: 5px;
    margin-top: 1.5rem;
}

.author__img {
    width: 32px;
}

